--- a/pages/parkfulldetails.html
+++ b/pages/parkfulldetails.html
@@ -10,6 +10,7 @@
     <body onload="loginSalesforce()">
 
         <script type="text/javascript">
+            var access_token;
             function loginSalesforce(){
                 $.ajax({
                         type: 'POST',
@@ -25,7 +26,9 @@
                             "password"      : "Maxpl0re1KFSn1rlMAOWJygr0E8jc9QTst"
                         },
                         success : function (data) {
+                            access_token = data.access_token;
                             alert(data.access_token);
+                            getvalues();
                         },
                         error : function (data, errorThrown,status) {
                             alert(data.responseText);
@@ -56,6 +59,28 @@
                          console.log("Response Text: " + parsedData);
                     }
                 }  */
+            }
+            function getvalues(){
+                $.ajax({
+
+                    headers: {
+                        "Authorization"    : "Bearer "+access_token;/*00D50000000adDr!ARwAQJfmwqv4VpQCbjF6kWvWXa1IsHUSgWPGnBKblTPHY2qHQOOLYoHALd6gR5BMZG6MQjwE6Hp7bA86UDcQGsF6p_lGw11W" */
+                    },
+                    type: 'GET',
+                    crossOrigin: true,
+                    url: 'https://sfdc-cors.herokuapp.com/services/apexrest/alti_snapin/FieldCase',
+                    dataType: 'json',
+                    cache :false,
+                    data : {
+                        
+                    },
+                    success : function (datas) {
+                        alert(datas);
+                    },
+                    error : function (data, errorThrown,status) {
+                        $('#token').text('ERROR: ' + data);
+                    }
+                });
             }
 
         </script>
