--- a/pages/parkfulldetails.html
+++ b/pages/parkfulldetails.html
@@ -11,6 +11,7 @@
 
         <script type="text/javascript">
             var access_token;
+            console.log("try getvalues()");
             function loginSalesforce(){
                 $.ajax({
                         type: 'POST',
