--- a/pages/parkfulldetails.html
+++ b/pages/parkfulldetails.html
@@ -65,7 +65,7 @@
                 $.ajax({
 
                     headers: {
-                        "Authorization"    : "Bearer "+access_token;/*00D50000000adDr!ARwAQJfmwqv4VpQCbjF6kWvWXa1IsHUSgWPGnBKblTPHY2qHQOOLYoHALd6gR5BMZG6MQjwE6Hp7bA86UDcQGsF6p_lGw11W" */
+                        "Authorization"    : "Bearer "+access_token/*00D50000000adDr!ARwAQJfmwqv4VpQCbjF6kWvWXa1IsHUSgWPGnBKblTPHY2qHQOOLYoHALd6gR5BMZG6MQjwE6Hp7bA86UDcQGsF6p_lGw11W" */
                     },
                     type: 'GET',
                     crossOrigin: true,
