--- a/pages/parkfulldetails.html
+++ b/pages/parkfulldetails.html
@@ -10,7 +10,7 @@
     <body onload="loginSalesforce()">
 
         <script type="text/javascript">
-            var access_token;
+            /*var access_token;
             console.log("try getvalues()");
             function loginSalesforce(){
                 $.ajax({
@@ -34,7 +34,7 @@
                         error : function (data, errorThrown,status) {
                             alert(data.responseText);
                         }
-                });
+                }); */
 
 
 
@@ -59,13 +59,13 @@
                          parsedData = JSON.parse(request.responseText);
                          console.log("Response Text: " + parsedData);
                     }
-                }  */
-            }
-            function getvalues(){
+                }  
+            } */  
+            /*function getvalues(){
                 $.ajax({
 
                     headers: {
-                        "Authorization"    : "Bearer "+access_token/*00D50000000adDr!ARwAQJfmwqv4VpQCbjF6kWvWXa1IsHUSgWPGnBKblTPHY2qHQOOLYoHALd6gR5BMZG6MQjwE6Hp7bA86UDcQGsF6p_lGw11W" */
+                        "Authorization"    : "Bearer "+access_token/*00D50000000adDr!ARwAQJfmwqv4VpQCbjF6kWvWXa1IsHUSgWPGnBKblTPHY2qHQOOLYoHALd6gR5BMZG6MQjwE6Hp7bA86UDcQGsF6p_lGw11W" /*
                     },
                     type: 'GET',
                     crossOrigin: true,
@@ -82,7 +82,7 @@
                         $('#token').text('ERROR: ' + data);
                     }
                 });
-            }
+            } 
 
         </script>
         <div class="container-fluid">
