--- a/pages/parkfulldetails.html
+++ b/pages/parkfulldetails.html
@@ -6,10 +6,15 @@
         <link rel="stylesheet" href="../rateit/rateit.css" />
         <link rel="stylesheet" href="../css/style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">   
+        <script src="../js/library/jquery.min.js"></script>
+        <script src="../js/library/bootstrap.min.js"></script>
+        <script src="../rateit/jquery.rateit.js"></script>
+        <script src="../js/app.js"></script>
     </head>
     <body onload="loginSalesforce()">
 
         <script type="text/javascript">
+        console.log("reverseorder");
             /*var access_token;
             console.log("try getvalues()");
             function loginSalesforce(){
@@ -164,9 +169,5 @@
                 </div>
             </div>
         </footer>
-        <script src="../js/library/jquery.min.js"></script>
-        <script src="../js/library/bootstrap.min.js"></script>
-        <script src="../js/app.js"></script>
-        <script src="../rateit/jquery.rateit.js"></script>
     </body>
 </html>
