--- a/pages/parkfulldetails.html
+++ b/pages/parkfulldetails.html
@@ -65,12 +65,11 @@
                          console.log("Response Text: " + parsedData);
                     }
                 }  
-            } */  
-            /*function getvalues(){
+            } function getvalues(){
                 $.ajax({
 
                     headers: {
-                        "Authorization"    : "Bearer "+access_token/*00D50000000adDr!ARwAQJfmwqv4VpQCbjF6kWvWXa1IsHUSgWPGnBKblTPHY2qHQOOLYoHALd6gR5BMZG6MQjwE6Hp7bA86UDcQGsF6p_lGw11W" /*
+                        "Authorization"    : "Bearer "+access_token   */ /*00D50000000adDr!ARwAQJfmwqv4VpQCbjF6kWvWXa1IsHUSgWPGnBKblTPHY2qHQOOLYoHALd6gR5BMZG6MQjwE6Hp7bA86UDcQGsF6p_lGw11W" 
                     },
                     type: 'GET',
                     crossOrigin: true,
@@ -86,8 +85,8 @@
                     error : function (data, errorThrown,status) {
                         $('#token').text('ERROR: ' + data);
                     }
-                });
-            } 
+                }); 
+            }   */
 
         </script>
         <div class="container-fluid">
