--- a/pages/parkfulldetails.html
+++ b/pages/parkfulldetails.html
@@ -154,7 +154,7 @@
 
                 <span>Upload Picture &nbsp;<img src="../images/camera.png" width="20" /></span><br /><br />
 
-                <button class="btn btn-primary btn-block" value="Submit" onclick="upsertCase($('#issuetype').val())">Submit</button>
+                <button class="btn btn-primary btn-block" value="Submit" onclick="upsertCase($('#issuetype').val(), $('#issuedescription').val())">Submit</button>
             </div>       
         </div>
         <footer class="full-width">
