--- a/pages/parkfulldetails.html
+++ b/pages/parkfulldetails.html
@@ -14,7 +14,7 @@
     <body onload="loginSalesforce()">
 
         <script type="text/javascript">
-        console.log("reverseorder");
+        console.log("new test");
             /*var access_token;
             console.log("try getvalues()");
             function loginSalesforcef(){
@@ -150,6 +150,7 @@
                     <option value="Double Parked- unable to park">Double Parked- unable to park</option>
                     <option value="Entry Blocked">Entry Blocked</option>
                 </select><br /> 
+
                 <textarea class="form-control" name="issuenotes" id="issuedescription" cols="20" rows="3" placeholder="Issue Description"></textarea><br />
 
                 <span>Upload Picture &nbsp;<img src="../images/camera.png" width="20" /></span><br /><br />
