--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -6,6 +6,10 @@
         <link rel="stylesheet" href="../rateit/rateit.css" />
         <link rel="stylesheet" href="../css/style.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1">   
+        <script src="../js/library/jquery.min.js"></script>
+        <script src="../js/library/bootstrap.min.js"></script>
+        <script src="../js/app.js"></script>
+        <script src="../rateit/jquery.rateit.js"></script>
     </head>
     <body>
         <div class="container-fluid">
@@ -15,7 +19,7 @@
             </div>
             <div class="row border pad">
                 <p><strong>Parking Id ::</strong>
-                    <span>FP07112016007</span>
+                    <span id="parkingId"></span>
                 </p>
             </div>
             <div class="row border pad">
@@ -97,9 +101,6 @@
                 </div>
             </div>
         </footer>
-        <script src="../js/library/jquery.min.js"></script>
-        <script src="../js/library/bootstrap.min.js"></script>
-        <script src="../js/app.js"></script>
-        <script src="../rateit/jquery.rateit.js"></script>
+
     </body>
 </html>
