change span to div

--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -19,12 +19,12 @@
             </div>
             <div class="row border pad">
                 <p><strong>Parking Id ::</strong>
-                    <span id="parkingId"></span>
+                    <div id="parkingId"></div>
                 </p>
             </div>
             <div class="row border pad">
                 <p><strong>Issue Description ::</strong>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt odio ut dapibus finibus.</span>
+                    <span>Lorm ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt odio ut dapibus finibus.</span>
                 </p>
             </div>
             <div class="row border pad gray-bg">
