onload for innerhtml

--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -18,7 +18,7 @@
                 <p class="tcenter">Service Ticket</p>
             </div>
             <div class="row border pad">
-                <p><strong>Parking Id ::</strong>
+                <p onload="generateParkingId()"><strong>Parking Id ::</strong>
                     <div id="parkingId"></div>
                 </p>
             </div>
