change div to span

--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -19,7 +19,7 @@
             </div>
             <div class="row border pad">
                 <p onload="generateParkingId()"><strong>Parking Id ::</strong>
-                    <div id="parkingId"></div>
+                    <span id="parkingId"></span>
                 </p>
             </div>
             <div class="row border pad">
