--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="img">
-                    <a href="pages/screen2.html"><img src="images/IMG_3213.png" class="img-responsive" height="100%" /></a>
+                    <a href="pages/screen2.html"><img src="images/IMG_3213.PNG" class="img-responsive" height="100%" /></a>
                 </div>
             </div>
         </div>
