--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -24,7 +24,7 @@
             </div>
             <div class="row border pad">
                 <p><strong>Issue Description ::</strong>
-                    <span>Lorm ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt odio ut dapibus finibus.</span>
+                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt odio ut dapibus finibus.</span>
                 </p>
             </div>
             <div class="row border pad gray-bg">
