--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -19,9 +19,9 @@
     </head>
     <body onload="generateParkingId()">
 
-        
 
-        <a id="liveagent_button_online_57350000000L3RP" href="javascript://Chat" style="display: none;" onclick="liveagent.startChat('57350000000L3RP')">
+
+        <a id="liveagent_button_online_57350000000L3RP" href="javascript://Chat" style="display: none;" onclick="liveagent.startChatWithWindow('57350000000L3RP', body)">
             <img src="chat.png" alt="Start chat" title="Start chat" style="max-width: 300px;"/>
         </a>
 
@@ -87,7 +87,7 @@
             </div>
             <div class="row border pad">
                 <p><strong>Issue Description ::</strong>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt odio ut dapibus finibus.</span>
+                    <span>Lorm ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt odio ut dapibus finibus.</span>
                 </p>
             </div>
             <div class="row border pad gray-bg">
