--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -21,7 +21,7 @@
 
 
 
-        <a id="liveagent_button_online_57350000000L3RP" href="javascript://Chat" style="display: none;" onclick="liveagent.startChatWithWindow('57350000000L3RP', chatWindow)">
+        <a id="liveagent_button_online_57350000000L3RP" href="javascript://Chat" style="display: none;" onclick="liveagent.startChatWithWindow('57350000000L3RP', 'chatWindow')">
             <img src="chat.png" alt="Start chat" title="Start chat" style="max-width: 300px;"/>
         </a>
 
