--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -21,9 +21,7 @@
 
 
 
-        <a id="liveagent_button_online_57350000000L3RP" href="javascript://Chat" style="display: none;" onclick="liveagent.startChatWithWindow('57350000000L3RP', 'chatWindow')">
-            <img src="chat.png" alt="Start chat" title="Start chat" style="max-width: 300px;"/>
-        </a>
+
 
         <!-- Offline chat -->
         <div id="liveagent_button_offline_57350000000L3RP" style="display: none;">
@@ -95,7 +93,13 @@
                     <span><input type="radio" name="proboptions" value="altpark" /> Reallocate &mdash; Provide Alternate Parking </span> <br />
                     <span><input type="radio" name="proboptions" value="refund" /> Refund </span> <br /><br />
                 
-                   <p class="pull-left M_L_2"> <i class="glyphicon glyphicon-comment icon-effect-2 icon-medium-effect "></i>Chat Now</p>
+                   <p class="pull-left M_L_2"> <i class="glyphicon glyphicon-comment icon-effect-2 icon-medium-effect "></i>
+                    <a id="liveagent_button_online_57350000000L3RP" href="javascript://Chat" style="display: none;" onclick="liveagent.startChatWithWindow('57350000000L3RP', 'chatWindow')">
+                        <img src="chat.png" alt="Start chat" title="Start chat" style="max-width: 300px;"/>
+                    </a>
+
+                    Chat Now
+                   </p>
                     <p class="pull-left M_L_12"><i class="glyphicon glyphicon-earphone icon-effect-2 icon-medium-effect"></i>Call Now</p>
                     <!--<p class="pull-left M_L_12"><i class="glyphicon glyphicon-alert icon-effect-1 icon-medium-effect-1"></i>Roadside<br /> Assistance</p>-->
                 </p>
