--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -85,7 +85,7 @@
             </div>
             <div class="row border pad">
                 <p><strong>Issue Description ::</strong>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt odio ut dapibus finibus.</span>
+                    <span>Lorm ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt odio ut dapibus finibus.</span>
                 </p>
             </div>
             <div class="row border pad gray-bg">
@@ -95,7 +95,7 @@
                 
                    <p class="pull-left M_L_2"> <i class="glyphicon glyphicon-comment icon-effect-2 icon-medium-effect "></i>
                     <a id="liveagent_button_online_57350000000L3RP" href="javascript://Chat" style="display: none;" onclick="liveagent.startChatWithWindow('57350000000L3RP', 'chatWindow')">
-                        Chat Now
+                        <p>Chat Now</p>
                         <!--<img src="chat.png" alt="Start chat" title="Start chat" style="max-width: 300px;"/> -->
                     </a>
 
