--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -156,7 +156,7 @@
             </div>
             </div> 
         </div>
-        <iframe name="chatWindow" id="chatWindow"></iframe>
+        <iframe name="chatWindow" id="chatWindow" width="100%"></iframe>
         <footer class="full-width">
             <div class="row tcenter full-width">
                 <div class="col-xs-4 factive">
