--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -96,6 +96,7 @@
                    <p class="pull-left M_L_2"> <i class="glyphicon glyphicon-comment icon-effect-2 icon-medium-effect "></i>
                     <a id="liveagent_button_online_57350000000L3RP" href="javascript://Chat" style="display: none;" onclick="liveagent.startChatWithWindow('57350000000L3RP', 'chatWindow')">
                         Chat Now
+                        <script type="text/javascript"> $('#chatWindow').show()</script>
                         <!--<img src="chat.png" alt="Start chat" title="Start chat" style="max-width: 300px;"/> -->
                     </a>
 
