--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -95,8 +95,12 @@
                 
                    <p class="pull-left M_L_2"> <i class="glyphicon glyphicon-comment icon-effect-2 icon-medium-effect "></i>
                     <a id="liveagent_button_online_57350000000L3RP" href="javascript://Chat" style="display: none;" onclick="liveagent.startChatWithWindow('57350000000L3RP', 'chatWindow')">
-                        Chat Now
-                        <script type="text/javascript"> $('#chatWindow').show()</script>
+                        <button onlick="showChat()">Chat Now</button>Chat Now
+                        <script type="text/javascript"> 
+                        function showChat(){
+                            $('#chatWindow').show()
+                        }
+                        </script>
                         <!--<img src="chat.png" alt="Start chat" title="Start chat" style="max-width: 300px;"/> -->
                     </a>
 
