--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -85,7 +85,7 @@
             </div>
             <div class="row border pad">
                 <p><strong>Issue Description ::</strong>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt odio ut dapibus finibus.</span>
+                    <span>Lorm ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tincidunt odio ut dapibus finibus.</span>
                 </p>
             </div>
             <div class="row border pad gray-bg">
@@ -161,7 +161,7 @@
             </div>
             </div> 
         </div>
-        <iframe name="chatWindow" id="chatWindow" width="100%"></iframe>
+        <iframe style="display:none" name="chatWindow" id="chatWindow" width="100%"></iframe>
         <footer class="full-width">
             <div class="row tcenter full-width">
                 <div class="col-xs-4 factive">
