--- a/pages/serviceticket.html
+++ b/pages/serviceticket.html
@@ -95,7 +95,7 @@
                 
                    <p class="pull-left M_L_2"> <i class="glyphicon glyphicon-comment icon-effect-2 icon-medium-effect "></i>
                     <a id="liveagent_button_online_57350000000L3RP" href="javascript://Chat" style="display: none;" onclick="liveagent.startChatWithWindow('57350000000L3RP', 'chatWindow');showChat();">
-                        <button onlick="showChat()">Chat Now</button>Chat Now
+                        Chat Now
                         <script type="text/javascript"> 
                         function showChat(){
                             console.log("OPENING CHAT");
